rds.tf
# Database Subnet Group
resource "aws_db_subnet_group" "db_subnet_group" {
  name       = "db_subnet_group"
  subnet_ids = [for subnet in aws_subnet.private_subnet : subnet.id]
  # subnet_ids = [aws_subnet.private_subnet.id]

  tags = {
    Name = "db_subnet_group"
  }
}

# # RDS Instance
resource "aws_db_instance" "db" {
  allocated_storage      = 10
  db_name                = "db"
  engine                 = "mysql"
  engine_version         = "8.0"
  instance_class         = "db.t3.micro"
  username               = "admin"
  password               = "password"
  parameter_group_name   = "default.mysql8.0"
  db_subnet_group_name   = aws_db_subnet_group.db_subnet_group.name
  vpc_security_group_ids = [aws_security_group.db_sg.id]
  skip_final_snapshot    = true
}
